fix(viewer): no horizontal scroll

--- a/site/src/components/KilledNamesListGrid/killedNamesListGrid.module.css
+++ b/site/src/components/KilledNamesListGrid/killedNamesListGrid.module.css
@@ -204,6 +204,10 @@
   gap: 20px;
 }
 
+.gridContainer {
+  overflow-x: hidden;
+}
+
 .gridContainer::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 16px;
